# restart_app

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  analysis_options.yaml  pubspec.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs-pages.yml
android/: build.gradle  settings.gradle
doc/: .mintignore  docs.json  index.mdx  quickstart.mdx
doc/product/: background-isolates.mdx  ios-engine-restart.mdx  platform-behavior.mdx
doc/reference/: api.mdx  configuration.mdx  linux.mdx
doc/scripts/: prepare-github-pages.mjs
example/: README.md  pubspec.yaml
example/android/: build.gradle  build.gradle.kts  settings.gradle
example/lib/: main.dart  platform_probes.dart  platform_probes_io.dart  platform_probes_stub.dart  restart_checks.dart
example/ohos/: build-profile.json5  oh-package.json5
example/test/: widget_test.dart
example/web/: index.html  manifest.json
ios/: .gitignore  Package.swift  restart_app.podspec
ios/restart_app/: Package.swift
lib/: restart_app.dart  restart_web.dart
linux/: CMakeLists.txt  restart_app_plugin.cc
macos/: Package.swift  restart_app.podspec
ohos/: .gitignore  build-profile.json5  hvigorfile.ts  index.ets  oh-package.json5
test/: docs_site_test.dart  restart_app_test.dart  restart_test.dart
windows/: CMakeLists.txt  restart_app_plugin.cpp  restart_app_plugin.h  restart_app_plugin_c_api.cpp
windows/include/restart_app/: restart_app_plugin_c_api.h
(+29 files in other folders)
